--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,6 @@
 <body class="custom-background">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -18,14 +17,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('bio') }}">CV</a>
+                        <a class="nav-link {% if request.endpoint == 'bio' %}active{% endif %}" aria-current="page" href="{{ url_for('bio') }}">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('portfolio') }}">Portfolio</a>
+                        <a class="nav-link {% if request.endpoint == 'portfolio' %}active{% endif %}" href="{{ url_for('portfolio') }}">Portfolio</a>
                     </li>
                 </ul>
             </div>
         </div>
+
     </nav>
 
 <div class="container mt-4">
