--- a/templates/base.html
+++ b/templates/base.html
@@ -8,32 +8,83 @@
     <title>{% block title %}My Flask App{% endblock %}</title>
 </head>
 <body class="custom-background">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'bio' %}active{% endif %}" aria-current="page" href="{{ url_for('bio') }}">CV</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'portfolio' %}active{% endif %}" href="{{ url_for('portfolio') }}">Portfolio</a>
-                    </li>
-                </ul>
+    <div class="container mt-4">
+        <div class="row">
+
+            <div class="col-md-4 main_about">
+                <div class="p-3 h-100 about_col">
+                    <div class="bio_about mt-3">
+                        <div class="bio_name text-center">
+                            <h2 class="mb-2">Martina Boboková</h2>
+                            <img src="/static/images/36.jpg" alt="photo" class="p-3 img-fluid mx-auto d-block rounded-circle">
+                            <blockquote class="d-inline-block">
+                                „Believe you can and you're halfway there.“
+                                <br>
+                                <span class="d-block text-end">- Theodore Roosevelt</span>
+                            </blockquote>
+                        </div>
+
+
+
+                    </div>
+                    <div class="bio_skills mt-3">
+                        <h4 class="mt-4 mb-5 text-end">TECH EXPERIENCES</h4>
+                        <pre><code>
+{
+  'Python': ['Flask', 'Django'],
+  'VCS': ['Git', 'GitHub', 'GitLab'],
+  'DB': ['MySQL', 'SQLite'],
+  'FrontEnd': {
+    'JavaScript': ['Node.js', 'jQuery'],
+    'Google Apps Script || Cloud'': [''],
+    'HTML': [''],
+    'CSS': ['Sass', 'Bootstrap']
+  },
+  'IDEs': ['PyCharm', 'Visual Studio Code'],
+  'Other': ['Jupyter', 'Linux', 'ASP'],
+  'Tools': ['Jira', 'Trello', 'Figma']
+}
+                        </code></pre>
+                    </div>
+                    <div class="bio_contact mt-5">
+                        <h4 class="mt-2 mb-4">Contact me</h4>
+                        <p class="mt-2">
+                            <img src="/static/images/address.png" alt="photo" class="img-fluid">
+                            Prague</p>
+                        <p class="mt-2">
+                            <img src="/static/images/phone.png" alt="photo" class="img-fluid">
+                            <a class="text-decoration-none text-white" href="tel:+420778962765">778 962 765</a></p>
+                        <p class="mt-2">
+                            <img src="/static/images/mail.png" alt="photo" class="img-fluid">
+                            martina.bobokova@gmail.com</p>
+
+                    </div>
+                </div>
             </div>
+
+            <div class="col-md-8 main_content">
+
+                <nav class="navbar navbar-expand bg-dark">
+                    <ul class="navbar-nav w-100">
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'bio' %}active{% endif %}" aria-current="page" href="{{ url_for('bio') }}">Work Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'portfolio' %}active{% endif %}" href="{{ url_for('portfolio') }}">Portfolio</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="p-4 h-100">
+                    {% block content %}
+                    <!-- Main content block, to be overridden by child templates -->
+                    {% endblock %}
+                </div>
+            </div>
+
         </div>
-
-    </nav>
-
-<div class="container mt-4">
-
-        {% block content %}
-        <!-- Tento blok bude nahradený obsahom z dedičnej šablóny -->
-        {% endblock %}
-</div>
+    </div>
 
     <script src="/static/js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
