--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -3,11 +3,11 @@
 {% block title %}Portfolio{% endblock %}
 
 {% block content %}
-<h2 class="my-5">Portfolio</h2>
-<div class="row g-5">
+
+<div class=" g-5 my-3">
     {% for project in projects %}
-    <div class="col-md-6 my-5">
-        <div class="project row ">
+    <div class="">
+        <div class="project row my-3">
             <div class="col-md-6">
                 <h5>{{ project.title }}</h5>
                 <p>{{ project.description }}</p>
