--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body class="custom-background">
 
-    <div class="container mt-4">
+    <div class="container">
         <div class="row">
 
             <div class="col-md-4 main_about">
