--- a/templates/bio.html
+++ b/templates/bio.html
@@ -23,18 +23,27 @@
             </div>
         </div>
     {% endfor %}
-    {% for old_job in old_jobs %}
-        <div class="bio_job my-4">
-            <h4 class="">{{ old_job.position_name | safe }}</h4>
-            <h5 class="">- {{ old_job.company | safe }}</h5><br>
 
-            <p>{{ old_job.job_description | safe }}</p>
+    <!-- Button to toggle the visibility of the old jobs section -->
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-secondary btn_history" type="button" data-bs-toggle="collapse" data-bs-target="#old-jobs-section" aria-expanded="false" aria-controls="old-jobs-section">
+            I want to see ancient history...
+        </button>
+    </div>
 
-            <div class="d-flex justify-content-end">
-
+    <!-- Collapsible section for old jobs -->
+    <div class="collapse mt-3" id="old-jobs-section">
+        {% for old_job in old_jobs %}
+            <div class="bio_job my-4">
+                <h4 class="">{{ old_job.position_name | safe }}</h4>
+                <h5 class="">- {{ old_job.company | safe }}</h5><br>
+                <p>{{ old_job.job_description | safe }}</p>
+                <div class="d-flex justify-content-end">
+                    <!-- Additional content if needed -->
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 
 
