--- a/templates/base.html
+++ b/templates/base.html
@@ -17,18 +17,46 @@
                     <div class="bio_about mt-3">
                         <div class="bio_name text-center">
                             <h2 class="mb-2">Martina Boboková</h2>
+                            <!--
                             <img src="/static/images/36.jpg" alt="photo" class="p-3 img-fluid mx-auto d-block rounded-circle">
+                            -->
                             <blockquote class="d-inline-block">
                                 „Believe you can and you're halfway there.“
                                 <br>
                                 <span class="d-block text-end">- Theodore Roosevelt</span>
                             </blockquote>
                         </div>
-
-
-
                     </div>
-                    <div class="bio_skills mt-3">
+
+                    <div id="cat-size">
+                        <div id="cat-animation"></div>
+                    </div>
+
+                    <div class="bio_contact row">
+
+                        <div class="col">
+                            <p class="mt-2">
+                                <img src="/static/images/address.png" alt="photo" class="img-fluid">
+                                Prague</p>
+                            <p class="mt-2">
+                                <img src="/static/images/phone.png" alt="photo" class="img-fluid">
+                                <a class="text-decoration-none text-white" href="tel:+420778962765">778 962 765</a></p>
+                        </div>
+
+                        <div class="col text-end">
+                            <button type="button" class="btn btn_contact" data-bs-toggle="modal"
+                                    data-bs-target="#contactMeModal" data-bs-toggle="tooltip" title="Contact Me"
+                                    aria-label="Contact Me">
+                                    <img src="/static/images/communicate.png" alt="Contact Me">
+                            </button>
+                        </div>
+
+                        <p class="">
+                            <img src="/static/images/mail.png" alt="photo" class="img-fluid">
+                            martina.bobokova@gmail.com</p>
+                    </div>
+
+                    <div class="bio_skills mt-5">
                         <h4 class="mt-4 mb-5 text-end">TECH EXPERIENCES</h4>
                         <pre><code>
 {
@@ -47,19 +75,7 @@
 }
                         </code></pre>
                     </div>
-                    <div class="bio_contact mt-5">
-                        <h4 class="mt-2 mb-4">Contact me</h4>
-                        <p class="mt-2">
-                            <img src="/static/images/address.png" alt="photo" class="img-fluid">
-                            Prague</p>
-                        <p class="mt-2">
-                            <img src="/static/images/phone.png" alt="photo" class="img-fluid">
-                            <a class="text-decoration-none text-white" href="tel:+420778962765">778 962 765</a></p>
-                        <p class="mt-2">
-                            <img src="/static/images/mail.png" alt="photo" class="img-fluid">
-                            martina.bobokova@gmail.com</p>
 
-                    </div>
                 </div>
             </div>
 
@@ -89,6 +105,89 @@
     <script src="/static/js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.4/lottie.min.js"></script>
 
+<!-- Modal block CONTACT ME -->
+
+<div class="modal fade" id="contactMeModal" tabindex="-1" aria-labelledby="contactMeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+             <div class="modal-header">
+                <h5 class="modal-title" id="contactMeModalLabel">Contact Me</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" >
+                    <div class="form-group mb-4">
+                        <label for="sender">E-mail:</label>
+                        <input class="form-control mb-3 mt-2" id="sender" name="sender" type="email" required>
+                        <label for="message">Message:</label>
+                        <textarea class="form-control mt-2" id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <div class="row justify-content-end">
+                        <div class="col-auto form-group">
+                            <button class="btn btn-secondary" id="form_button" type="submit">Send E-mail</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!-- Flash success / error message after submit CONTACT ME form -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 1050;">
+                {% for category, message in messages %}
+                    <div class="toast align-items-center bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000" id="toastMessage">
+                        <div class="d-flex">
+                            <div class="toast-body">
+                                {{ message }}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+
+    <!-- Flash success / error message script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var toastElList = [].slice.call(document.querySelectorAll('.toast'));
+            var toastList = toastElList.map(function (toastEl) {
+                return new bootstrap.Toast(toastEl);
+            });
+            toastList.forEach(toast => toast.show()); // Show each toast message automatically
+        });
+    </script>
+
+
+    <!-- Cat animation Lottie -->
+    <script>
+        var animation = lottie.loadAnimation({
+            container: document.getElementById('cat-animation'),
+            path: '/static/animations/kitty.json',
+            renderer: 'svg',
+            loop: false,
+            autoplay: false,
+            name: "Kitty"
+        });
+        animation.setSpeed(0.7);
+
+        // Event listener for mouse pointer
+        document.getElementById('cat-animation').addEventListener('mouseenter', function() {
+            animation.play(); // Start the animation on mouse enter
+        });
+
+        // Reverse animation back after completed
+        animation.addEventListener('complete', function() {
+            animation.setDirection(-1); // Set direction to reverse
+            animation.play(); // Play the animation in reverse
+        });
+
+
+    </script>
 </body>
 </html>
