--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,8 @@
             <div class="col-md-4 main_about">
                 <div class="p-3 h-100 about_col">
                     <div class="bio_about mt-3">
-                        <div class="bio_name text-center">
+                        <div class="bio_name p-2">
                             <h2 class="mb-2">Martina Boboková</h2>
-                            <!--
-                            <img src="/static/images/36.jpg" alt="photo" class="p-3 img-fluid mx-auto d-block rounded-circle">
-                            -->
                             <blockquote class="d-inline-block">
                                 „Believe you can and you're halfway there.“
                                 <br>
@@ -97,7 +94,7 @@
 
                 <div class="p-4 h-100">
                     {% block content %}
-                    <!-- Main content block, to be overridden by child templates -->
+                    <!-- Main content block -->
                     {% endblock %}
                 </div>
             </div>
@@ -105,38 +102,41 @@
         </div>
     </div>
 
+
+    <!-- ** -- Interactivity / Dynamic Elements. -- ** -->
+
     <script src="static/js/cat_animation_scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.4/lottie.min.js"></script>
 
-<!-- Modal block CONTACT ME -->
+    <!-- Modal block CONTACT ME -->
 
-<div class="modal fade" id="contactMeModal" tabindex="-1" aria-labelledby="contactMeModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-             <div class="modal-header">
-                <h5 class="modal-title" id="contactMeModalLabel">Contact Me</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form method="post" >
-                    <div class="form-group mb-4">
-                        <label for="sender">E-mail:</label>
-                        <input class="form-control mb-3 mt-2" id="sender" name="sender" type="email" required>
-                        <label for="message">Message:</label>
-                        <textarea class="form-control mt-2" id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <div class="row justify-content-end">
-                        <div class="col-auto form-group">
-                            <button class="btn btn-secondary" id="form_button" type="submit">Send E-mail</button>
+    <div class="modal fade" id="contactMeModal" tabindex="-1" aria-labelledby="contactMeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                 <div class="modal-header">
+                    <h5 class="modal-title" id="contactMeModalLabel">Contact Me</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" >
+                        <div class="form-group mb-4">
+                            <label for="sender">E-mail:</label>
+                            <input class="form-control mb-3 mt-2" id="sender" name="sender" type="email" required>
+                            <label for="message">Message:</label>
+                            <textarea class="form-control mt-2" id="message" name="message" rows="5" required></textarea>
                         </div>
-                    </div>
-                </form>
+                        <div class="row justify-content-end">
+                            <div class="col-auto form-group">
+                                <button class="btn btn-secondary" id="form_button" type="submit">Send E-mail</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <!-- Flash success / error message after submit CONTACT ME form -->
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -165,62 +165,9 @@
             toastList.forEach(toast => toast.show()); // Show each toast message automatically
         });
     </script>
-<!-- Cat animation Lottie / Contact -->
-<script>
-    var animation = lottie.loadAnimation({
-        container: document.getElementById('cat-animation'),
-        path: 'static/animations/kitty.json',
-        renderer: 'svg',
-        loop: false,
-        autoplay: false,
-        name: "Kitty"
-    });
-    animation.setSpeed(0.7);
 
-    // Event listener for mouse pointer
-    document.getElementById('cat-animation').addEventListener('mouseenter', function() {
-        animation.setDirection(1); // Ensure forward direction when hovered
-        animation.play(); // Start the animation on mouse enter
-    });
-
-    // Reverse animation after completion and reset to initial state
-    animation.addEventListener('complete', function() {
-        if (animation.playDirection === 1) {
-            // After playing forward, reverse it
-            animation.setDirection(-1);
-            animation.play();
-        } else {
-            // After reverse, reset to the first frame
-            animation.goToAndStop(0, true);
-        }
-    });
-</script>
-
-<!-- Lift Cat animation Lottie / Tech -->
-<script>
-    var lift_animation = lottie.loadAnimation({
-        container: document.getElementById('lift_cat-animation'),
-        path: '/static/animations/liftcat.json',
-        renderer: 'svg',
-        loop: true,
-        autoplay: true,
-        name: "liftcat"
-    });
-    animation.setSpeed(0.7);
-</script>
-
-<!-- Sitting Cat animation Lottie / Jobs -->
-<script>
-    var sittingCatAnimation = lottie.loadAnimation({
-        container: document.getElementById('sitting_cat-animation'),
-        path: '/static/animations/sitting_cat.json',
-        renderer: 'svg',
-        loop: true,
-        autoplay: true,
-        name: "sitting_cat"
-    });
-</script>
-
+    <!-- Cat animation Lottie -->
+    <script src="{{ url_for('static', filename='js/cat_animation_scripts.js') }}"></script>
 
 </body>
 </html>
