- fix mobile view for contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
                     <div class="bio_contact row">
 
-                        <div class="col">
+                        <div class="col-8">
                             <p class="mt-2">
                                 <img src="/static/images/address.png" alt="photo" class="img-fluid">
                                 Prague</p>
@@ -40,7 +40,7 @@
                                 <a class="text-decoration-none text-white" href="tel:+420778962765">778 962 765</a></p>
                         </div>
 
-                        <div class="col text-end">
+                        <div class="col-4 text-end">
                             <button type="button" class="btn btn_contact" data-bs-toggle="modal"
                                     data-bs-target="#contactMeModal" data-bs-toggle="tooltip" title="Contact Me"
                                     aria-label="Contact Me">
