- update padding for bio_jobs

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
                     </ul>
                 </nav>
 
-                <div class="p-4 h-100">
+                <div class="p-md-4 p-2 h-100">
                     {% block content %}
                     <!-- Main content block -->
                     {% endblock %}
